downgrade to Java 6

--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -148,7 +148,7 @@
         </profile>
     </profiles>
     
-    <url>http://jdbc-wrappers.sourceforge.net/</url>
+    <url>https://github.com/kszbcss/jdbc-wrappers</url>
     
     <inceptionYear>2008</inceptionYear>
     
