--- a/pom.xml
+++ b/pom.xml
@@ -74,9 +74,13 @@
     
     <build>
         <plugins>
+			<plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.2</version>
+            </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.3</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -84,7 +88,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.10</version>
+                <version>2.18.1</version>
                 <configuration>
                     <systemProperties>
                         <property>
@@ -96,7 +100,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.1.2</version>
+                <version>2.4</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -108,7 +112,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.10.3</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -137,7 +141,7 @@
         <connection>scm:git:https://github.com/kszbcss/jdbc-wrappers.git</connection>
         <developerConnection>scm:git:https://github.com/kszbcss/jdbc-wrappers.git</developerConnection>
         <url>https://github.com/kszbcss/jdbc-wrappers</url>
-    </scm>
+  </scm>
     
     <developers>
         <developer>
